[package]
name = "testmob"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.1", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.3", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[patch.crates-io]
tauri = { git = "https://github.com/tauri-apps/tauri?rev=971ad7ae06edd0b62fc8c7a05e3b041f9f33d273", rev = "971ad7ae06edd0b62fc8c7a05e3b041f9f33d273" }
tauri-build = { git = "https://github.com/tauri-apps/tauri?rev=971ad7ae06edd0b62fc8c7a05e3b041f9f33d273", rev = "971ad7ae06edd0b62fc8c7a05e3b041f9f33d273" }

[patch.'https://github.com/tauri-apps/tauri']
tauri = { git = "https://github.com/tauri-apps/tauri?rev=971ad7ae06edd0b62fc8c7a05e3b041f9f33d273", rev = "971ad7ae06edd0b62fc8c7a05e3b041f9f33d273" }
tauri-build = { git = "https://github.com/tauri-apps/tauri?rev=971ad7ae06edd0b62fc8c7a05e3b041f9f33d273", rev = "971ad7ae06edd0b62fc8c7a05e3b041f9f33d273" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
debug = true
